Added more details to pom. Added contributors section.

--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>ggs</name>
-	<url>http://maven.apache.org</url>
+	<name>Gun Gun Shoot</name>
+	<description>A Rock Paper Scissors type game.</description>
+	<url>https://github.com/drem-darios/GunGunShoot</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,18 +24,36 @@
 		</dependency>
 	</dependencies>
 
-    <developers>
-        <developer>
-            <id>drem</id>
-            <name>Drem Darios</name>
-            <url>http://www.xn--drm-4qa.com</url>
-            <email>drem.darios@gmail.com</email>
-            <roles>
-                <role>Project Founder</role>
-            </roles>
-        </developer>
-    </developers>
+	<scm>
+		<url>git@github.com:drem-darios/GunGunShoot.git</url>
+		<connection>scm:git:git@github.com:drem-darios/GunGunShoot.git</connection>
+		<developerConnection>scm:git:git@github.com:drem-darios/GunGunShoot.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
 
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/drem-darios/GunGunShoot/issues</url>
+	</issueManagement>
+
+	<developers>
+		<developer>
+			<id>drem-darios</id>
+			<name>Drem Darios</name>
+			<url>http://www.xn--drm-4qa.com</url>
+			<email>drem.darios@gmail.com</email>
+			<roles>
+				<role>Project Founder</role>
+			</roles>
+		</developer>
+	</developers>
+
+	<contributors>
+		<contributor>
+			<name>Sam Jacobson</name>
+			<url>https://github.com/Sbjacobs</url>
+		</contributor>
+	</contributors>
 
 	<build>
 		<plugins>
